third_party/rust/chromium_crates_io/vendor/derive_more-v2/tests/compile_fail/mul/unit_struct.rs
#[derive(derive_more::Mul)]
struct Foo;

#[derive(derive_more::Mul)]
#[mul(forward)]
struct Bar;

fn main() {}
